--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,6 @@
-aniso8601==8.0.0
-appdirs==1.4.3
-asn1crypto==0.24.0
-astroid==2.2.5
-Beaker==1.11.0
-cairocffi==1.1.0
-CairoSVG==2.4.2
-certifi==2018.8.24
-cffi==1.11.5
-chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-comtypes==1.1.7
-conda==4.2.7
-cryptography==2.3.1
-cssselect2==0.2.2
-defusedxml==0.6.0
-distlib==0.3.0
-docx==0.2.4
-et-xmlfile==1.0.1
-filelock==3.0.12
 Flask==1.1.1
-Flask-Jsonpify==1.5.0
+Flask-Jsonify==1.5.0
 Flask-RESTful==0.3.8
-Flask-SQLAlchemy==2.4.1
-future==0.18.2
-html5lib==1.0.1
-idna==2.7
-importlib-metadata==1.5.0
-isort==4.3.20
-itsdangerous==1.1.0
-jdcal==1.4.1
-Jinja2==2.11.1
-lazy-object-proxy==1.4.1
-lxml==4.4.2
-Mako==1.1.2
-MarkupSafe==1.1.1
-mccabe==0.6.1
-mysql-connector==2.2.9
-numpy==1.17.4
-oic==1.2.0
-opencv-python==4.2.0.34
-openpyxl==3.0.1
-pandas==0.25.3
-pdfcrowd==4.11.0
-pdfkit==0.6.1
-pdfrw==0.4
-Pillow==6.2.1
-pycosat==0.6.3
-pycparser==2.18
-pycryptodomex==3.9.7
-pyjwkest==1.4.2
-pylint==2.3.1
-pymssql==2.1.4
-PyMySQL==0.9.3
-pyodbc==4.0.30
-pyOpenSSL==18.0.0
-Pyphen==0.9.5
-PySocks==1.6.8
-python-dateutil==2.8.1
-python-docx==0.8.10
-pytz==2019.3
-pywin32==227
 requests==2.19.1
-ruamel-yaml==0.15.46
-six==1.12.0
-SQLAlchemy==1.3.13
-tinycss2==1.0.2
-typed-ast==1.3.5
-typing-extensions==3.7.4.2
-urllib3==1.23
-virtualenv==20.0.7
-WeasyPrint==50
-webencodings==0.5.1
-Werkzeug==1.0.0
-win-inet-pton==1.0.1
-wincertstore==0.2
-wkhtmltopdf==0.2
-wrapt==1.11.1
-xlrd==1.2.0
-zipp==3.1.0
+PyJWT==1.7.1
+pyodbc==4.0.30
