--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Flask==1.1.1
-Flask-Jsonify==1.5.0
-Flask-RESTful==0.3.8
-requests==2.19.1
+Flask==1.1.2
+requests==2.23.0
 PyJWT==1.7.1
-pyodbc==4.0.30
+pymssql==2.1.4
